# django-foundation

./: .example.env  .gitignore  Dockerfile  README.md  main.py  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt  tailwind.config.js
src/app/: settings.py  urls.py  views.py
src/auth/: admin.py  models.py  urls.py  utils.py  views.py
src/checkouts/: views.py
src/command/management/commands/: vendor_pull.py
src/customers/: admin.py  models.py  urls.py  views.py
src/dashboard/: urls.py  views.py
src/helpers/: billing.py
src/profiles/: views.py
src/saas_app/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/static/theme/: saas-theme.min.css
src/subscriptions/: admin.py  models.py  utils.py  views.py
src/subscriptions/management/commands/: sync_permission.py  (+1 more)
src/subscriptions/migrations/: 0001_initial.py
src/templates/: about.html  base.html  home.html
src/templates/account/: base.html  logout.html
src/templates/auth/: login.html  profile.html  register.html
src/templates/base/: css.html  message.html  messages.html
src/templates/checkout/: sucess.html
src/templates/dashboard/: bash.html  main.html  nav.html  sidebar.html
src/templates/landing/: cta.html  features.html  hero.html  main.html  proof.html
src/templates/nav/: navbar.html
src/templates/profile/: details.html  list.html
src/templates/protected/: entry.html  user-only.html  view.html
src/templates/subscriptions/: pricing.html  user_cancel_view.html  user_details_view.html
src/visits/: models.py
src/visits/migrations/: 0001_initial.py
(+1 files in other folders)
