[project]
name = "django-foundation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.4",
    "django-allauth-ui>=1.8.1",
    "django-allauth[socialaccount]>=65.10.0",
    "django-widget-tweaks>=1.5.0",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.9",
    "python-decouple>=3.8",
    "requests>=2.32.4",
    "stripe>=12.3.0",
    "whitenoise>=6.9.0",
]
